--- a/src/components/SupportChat/SupportChatWindow.css
+++ b/src/components/SupportChat/SupportChatWindow.css
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-height: 50dvh;
   max-height: 75dvh;
   background-color: #ffffff;
   border-radius: 20px 20px 0 0;
